@@ -243,15 +243,10 @@ require(package, quietly = FALSE, warn.conflicts = TRUE,
   because of potential problems with line endings and OS-specific help
   files.
 
-  \code{library} and \code{require} use the underlying file system
-  services to locate the libraries, with the result that on
-  case-sensitive file systems package names are case-sensitive
-  (i.e., \code{library(foo)} is different from
-  \code{library(Foo)}), but they are not distinguished on
-  case-insensitive file systems such as MS Windows.  A warning
-  is issued if the user specifies a name which isn't a perfect match
-  to the package name, because future versions of \R will require
-  exact matches.
+  As of version 2.0.0, the package name given to \code{library} and
+  \code{require} must match the name given in the package's
+  \code{DESCRIPTION} file exactly, even on case-insensitive file systems
+  such as MS Windows.
 }
 \author{
   R core;
